src/codegen/snapshots/simpl__codegen__test3__compile_lit-4.snap
---
source: src/codegen/test3.rs
expression: module.print_to_string().to_string()
---
; ModuleID = 'test_compile'
source_filename = "test_compile"

define i1 @toplevel() {
toplevel_entry:
  ret i1 false
}

